# prismnote

./: .gitignore  AI_INTEGRATION.md  AI_QUICKSTART.md  AI_TRAINING_FINETUNING.md  ARCHITECTURE.md  BIGDATA_FEATURES_PRIORITY.md  BIGDATA_IMPLEMENTATION.md  BUILD_STATUS_V02.md  CHANGELOG.md  CLOUD_WAREHOUSES.md  COMPARISON_OSS_NOTEBOOKS.md  COMPLETE_PACKAGING_ROADMAP.md  CONNECTORS.md  CONTRIBUTING.md  CURSOR_INTEGRATION_STRATEGY.md  Cargo.toml  DATABASE_CONNECTORS.md  DATABRICKS_COMPARISON.md  DEEPNOTE_COMPARISON.md  DESIGN_IMPROVEMENTS_PHASE1.md  DOCKER_CODE_EXECUTION.md  ENTERPRISE_AUTHENTICATION.md  ENTERPRISE_V10_FEATURES.md  EXECUTION_PIPELINE.md  EXTERNAL_CONNECTIONS_AND_FORMATS.md  FIXES_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY_V02.md  INTEGRATED_TOOLS_ARCHITECTURE.md  LAYOUT_RESTRUCTURE_PLAN.md  MACBOOK_SUPPORT.md  NOTEBOOK_COMPARISON_MATRIX.md  PACKAGE_RELEASES.md  PUBLISH_TO_PYPI.md  QUICK_START.md  README.md  SECURITY.md  SESSION_SUMMARY.md  SESSION_SUMMARY_EXTENDED.md  SPARK_MANAGEMENT.md  (+17 more)
.cargo/: config.toml
.github.bak/workflows/: release-binaries.yml
Formula/: prismnote.rb
crates/server/: Cargo.toml
crates/server/src/: ai.rs  ai_training.rs  airflow_integration.rs  api.rs  cell_executor.rs  cloud_storage.rs  cloud_warehouse.rs  connection_manager.rs  data_profiler.rs  db.rs  dbt_integration.rs  display_settings.rs  docker_executor.rs  duckdb_engine.rs  enterprise_auth.rs  execution_pipeline.rs  file_formats.rs  file_manager.rs  files.rs  github_integration.rs  github_sync.rs  iceberg_engine.rs  jobs.rs  k8s_deployment.rs  kernel.rs  library_advisor.rs  main.rs  models.rs  output_renderer.rs  platform.rs  rbac.rs  realtime_collab.rs  scheduler.rs  search_engine.rs  spark_manager.rs  sql_executor.rs  versioning.rs  ws.rs
docs/archive/: AI_QUICKSTART.md  BIGDATA_IMPLEMENTATION.md  BUILD_STATUS_V02.md  COMPARISON_OSS_NOTEBOOKS.md  COMPETITIVE_GAP_ANALYSIS.md  CRITICAL_GAPS_V04.md  DATABASE_CONNECTORS.md  EXECUTION_PIPELINE.md  FIXES_SUMMARY.md  FRONTEND_IMPLEMENTATION_GUIDE.md  INTERNAL_COMPETITIVE_ANALYSIS.md  LIBRARY_RECOMMENDATIONS.md  LIBRARY_SUGGESTIONS_QUICKSTART.md  README_CRITICAL_REVIEW.md  README_REVISED.md  V04_AND_V05_FEATURES.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: ai.ts  autocomplete.ts  data.ts  explore.ts  format.ts  git.ts  jobs.ts  kernel.ts  stream.ts
frontend/src/components/: AIPanel.tsx  AISettings.tsx  AISidebar.tsx  AgentPanel.tsx  BottomPanel.tsx  Cell.tsx  CommandPalette.tsx  ConnectionStatus.tsx  DataExplorer.tsx  DataFormats.tsx  DataFrameView.tsx  DataPanel.tsx  DatabaseConnector.tsx  DeployPanel.tsx  DisplaySettings.tsx  DuckDBExplorer.tsx  FileExplorer.tsx  FileManager.tsx  FindReplace.tsx  GitHubSync.tsx  GitPanel.tsx  JobsPanel.tsx  LibrarySuggester.tsx  MenuBar.tsx  Notebook.tsx  Output.tsx  ServerExplorer.tsx  SettingsModal.tsx  Sidebar.tsx  Toolbar.tsx  UnifiedSearch.tsx  VariableInspector.tsx  VizPane.tsx
frontend/src/components/common/: Button.tsx  Card.tsx  Input.tsx
frontend/src/hooks/: useAIContext.ts  useExplorerRequest.ts  useFontSize.ts  useNotebook.ts  usePlots.ts  useViz.ts  useWorkspace.ts
frontend/src/lib/: pyerror.ts
frontend/src/styles/: animations.css  components.css
homebrew/: HOMEBREW_TAP_SETUP.md  README.md
homebrew-formulas/: clusteraudiencekit.rb  prismnote.rb  statguard.rb
homebrew/completions/: _prismnote  prismnote.bash  prismnote.fish
homebrew/workflows/: homebrew-test.yml
python/: pyproject.toml
python/prismnote/: __init__.py  __main__.py  _cli.py
scripts/: build-release-binaries.sh
