[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismnote"
version = "0.4.3"
description = "Modern, open-source Jupyter-compatible data science notebook with Rust performance"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
requires-python = ">=3.8"
keywords = ["notebook", "jupyter", "data-science", "sql", "python", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Environment :: Web Environment",
]
dependencies = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[project.optional-dependencies]
# Database support — permissively-licensed (OSS) drivers only. See CONNECTORS.md.
sql = ["duckdb>=0.9", "pg8000>=1.30", "pymysql>=1.0"]   # MIT / BSD / MIT
postgres = ["pg8000>=1.30"]                              # BSD (pure-Python)
mysql = ["pymysql>=1.0"]                                 # MIT
duckdb = ["duckdb>=0.9"]                                 # MIT

# Cloud warehouses — official open-source clients (Apache-2.0 / MIT)
cloud = [
    "snowflake-connector-python[pandas]>=3.0",  # Apache-2.0
    "google-cloud-bigquery>=3.0",               # Apache-2.0
    "db-dtypes>=1.0",                            # Apache-2.0 (BigQuery -> pandas)
    "redshift_connector>=2.0",                  # Apache-2.0
    "databricks-sql-connector>=2.0",            # Apache-2.0
    "pyathena>=3.0",                            # MIT
    "trino>=0.328",                            # Apache-2.0
]

# AI features
ai = ["anthropic>=0.7"]
openai = ["openai>=1.0"]

# Big data
spark = ["pyspark>=3.0", "pyarrow>=10"]

# Development
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Mullassery/prismnote"
Repository = "https://github.com/Mullassery/prismnote"
Documentation = "https://github.com/Mullassery/prismnote#readme"
"Bug Tracker" = "https://github.com/Mullassery/prismnote/issues"

[project.scripts]
prismnote = "prismnote._cli:main"

# prismnote is a pure-Python wrapper: _cli.py downloads and launches the
# prebuilt PrismNote server binary. The Python package lives under python/.
[tool.setuptools]
package-dir = { "" = "python" }

[tool.setuptools.packages.find]
where = ["python"]
include = ["prismnote*"]
