[package]
name = "prismnote_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "prismnote"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
async-trait.workspace = true
zeromq.workspace = true
tempfile.workspace = true
anyhow.workspace = true
thiserror.workspace = true

reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
base64 = "0.22"
dirs = "5"
chrono = "0.4"
