[package]
name = "prismnote_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "prismnote"
path = "src/main.rs"

[dependencies]
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
async-trait.workspace = true
zeromq.workspace = true
tempfile.workspace = true
anyhow.workspace = true
thiserror.workspace = true

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "charset"] }
futures = "0.3"
base64 = "0.22"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
rust-embed = { version = "8", features = ["mime-guess"] }
